[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "A long running toy project"
authors = ["Kevin Boyette <kevinxboyette@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.971"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
pylint = "^2.14.3"
pytest = "^7.1.2"
pytype = "^2022.6.23"
vulture = "^2.4"
perflint = "^0.7.3"
pyupgrade = "^2.37.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

