[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "A long running toy project"
authors = ["Kevin Boyette <kevinxboyette@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pycodestyle = "^2.9.1"
pydocstyle = "^6.1.1"
pylint = "^2.15.4"
pytest = "^7.1.3"
pytype = "^2022.9.27"
vulture = "^2.6"
perflint = "^0.7.3"
pyupgrade = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
