[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "A long running toy project"
authors = ["Kevin Boyette <kevinxboyette@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
mypy = "^0.991"
pycodestyle = "^2.9.1"
pydocstyle = "^6.2.3"
pylint = "^2.15.8"
pytest = "^7.2.0"
pytype = "^2022.12.9"
vulture = "^2.6"
perflint = "^0.7.3"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
